Mise à jour rapport de tests et documentations

--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
 <h1>AlphaBot2 - RedBallBot</h1>
-<img id="videoStream" src="{{ url_for('video_stream') }}">
+<img id="videoStream" src="{{ url_for('video_stream') }}" alt="Flux vidéo manquant">
 <div id="controlRobot">
     <table id="direction">
         <tr>
